--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background:rgb(100, 100, 219); 
+  background:rgb(194, 194, 224); 
   width: 800px;
   margin: 0 auto;
   font-family: 'Open Sans', sans-serif;
@@ -7,7 +7,7 @@ body {
 .container {
   width: 600px;
   margin: 0 auto;
-  color:blue;
+  color:rgb(212, 175, 71);
 }
 
 fieldset {
